vlib/v/checker/tests/if_expr_last_stmt.vv
fn main() {
	_ = if true {
		1
	} else if false {
	} else {
	}
}
